--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-tilt": "^1.0.2",
+    "react-tilty": "^3.0.0",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.150.1"
   },
