--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-tilt": "^1.0.2",
     "react-tilty": "^3.0.0",
