--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-tilt": "^1.0.2",
     "react-tilty": "^3.0.0",
     "react-vertical-timeline-component": "^3.6.0",
+    "scrollreveal": "^4.0.9",
     "three": "^0.150.1"
   },
   "devDependencies": {
